--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,22 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Gadgets application
 
-Things you may want to cover:
+Features:
 
-* Ruby version
+* Unregistered users can create new user account (sign up)
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* Registered users can sign in / sign out
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Registered user can:
+
+* View gadgets collection
+
+* Switch view modes for gadgets collection between cover flow mode and list mode
+
+* Search gadgets
+
+* Upload several gadget images
+
+* View uploaded gadget images in different size
